# adjuntos101

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 01-requerimiento-y-alcance.md  02-arquitectura-poc.md  03-plan-sprints.md  04-backlog-criterios-y-riesgos.md  05-sprint-1-operacion.md  06-sprint-2-operacion.md  07-prueba-llamaparse-sdk.md  08-estado-actual-y-proximo-sprint.md  09-plan-sprint-3-ejecucion.md  10-iris105-bootstrap-y-smoke-test.md  11-plan-sprint-4-robustez-operacional.md  12-cierre-sprint-4-y-plan-sprint-5-web-console.md  13-entorno-iris-canonico.md  14-avance-y-reanudacion-2026-04-13.md
scripts/: bootstrap_iris_user.py  smoke_test_iris_worker.py  test_llamaparse_sdk.py
sql/: 001_init.sql  010_operational_queries.sql
src/adjuntos_worker/: __init__.py  __main__.py  claimer.py  classifier.py  cli.py  config.py  filesystem.py  fingerprint.py  logging_utils.py  models.py  normalizer.py  orchestrator.py  scanner.py  validator.py  webapp.py
src/adjuntos_worker/parse_clients/: __init__.py  llamaparse.py  mock.py
src/adjuntos_worker/repositories/: __init__.py  base.py  iris.py  noop.py
tests/: test_config.py  test_fingerprint.py  test_llamaparse_client.py  test_normalizer.py  test_webapp.py  test_worker.py
