[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adjuntos101"
version = "0.1.0"
description = "Worker documental para Adjuntos101"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
iris = ["intersystems-irispython>=3.8"]
llamacloud = ["llama-cloud>=1.6.0"]

[project.scripts]
adjuntos-worker = "adjuntos_worker.cli:main"
adjuntos-web = "adjuntos_worker.webapp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
